<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">우리동네 위험지도</string>
    <string name="copyright">© 2015 화학물질감시네트워크</string>
    <string name="action_settings">Settings</string>
    <string name="findContact">find Contacts</string>
    <string name="findCompany">회사명, 주소</string>
    <string name="title_custom_search">CUSTOM</string>
    <string name="info_parse_error">We can not process data.Please try again!</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Please wait...</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_info">Information</string>
    <string name="title_my_location">My Location</string>
    <string name="title_unknown_location">Unknown Location</string>
    <string name="title_unknown_address">Unknown Address</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_warning">Warning</string>
    <string name="title_share">Share</string>
    <string name="title_back">Back</string>
    <string name="title_images">Images</string>
    <string name="title_image">Image</string>
    <string name="title_all_place">All places in map</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search the location</string>
    <string name="title_quick_distance">Change radius</string>
    <string name="title_place_info">Place Information</string>
    <string name="title_user_reviews">User Reviews</string>
    <string name="format_reviews">%1$s Reviews</string>
    <string name="format_review">%1$s Review</string>
    <string name="format_radius">Radius: %1$s %2$s</string>
    <string name="format_address">Address: %1$s </string>
    <string name="format_area">Area: %1$s </string>
    <string name="format_lat">Latitude: %1$s </string>
    <string name="format_long">Longitude: %1$s </string>
    <string name="format_country">Country: %1$s </string>
    <string name="format_country_code">Country Code: %1$s </string>
    <string name="format_add_favorite">Add %1$s to favorite locations </string>
    <string name="format_remove_favorite">Remove %1$s to favorite locations </string>
    <string name="title_units">Unit Systems</string>
    <string name="title_piority">Piority</string>
    <string name="title_travel_modes">Travel Modes</string>
    <string name="info_loading_more">Finding more locations surrounding you.Please wait...</string>
    <string name="title_improve_location">Improve your location</string>
    <string name="title_location_services_disable">Location services disabled</string>
    <string name="info_location_services_disable">Wheres My Places needs access to your location.Please turn on location access</string>
    <string name="title_enable">Enable</string>
    <string name="info_get_location_error">Get location error!Please try again later</string>
    <string name="info_gps_enable">Turn on the following to improve your location:GPS</string>
    <string name="info_process_find_location">Finding your location.Please wait...</string>
    <string name="info_format_process_find_location">Start finding %1$s surrounding you </string>
    <string name="info_format_process_detail_location">Start getting information of %1$s </string>
    <string name="info_show_again">Don\'t show again</string>
    <string name="info_no_location">Can\'t not find locations surrounding you!</string>
    <string name="menu_location_terrain">Terrain View</string>
    <string name="menu_location_satellite">Satellite View</string>
    <string name="menu_location_traffic">Traffic View</string>
    <string name="menu_location_details">Location Details</string>
    <string name="tab_infomation">Information</string>
    <string name="tab_map">Map</string>

    <string-array name="metric_array">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="sorting_array">
        <item>Distance</item>
        <item>Rating</item>
    </string-array>
    <string-array name="travel_mode_array">
        <item>Driving</item>
        <item>Walking</item>
    </string-array>

    <string name="title_distance">Distance</string>
    <string name="title_rating">Rating</string>
    <string name="format_distance">Distance: ~%1$s</string>
    <string name="title_get_directions">Get Directions</string>
    <string name="title_sort_by_distance">Sort by distance</string>
    <string name="title_sort_by_rating">Sort by rating</string>
    <string name="title_contact_us">Contact us</string>
    <string name="info_contact_us">Contact us if you need any help</string>
    <string name="link_contact_us">Email</string>
    <string name="title_website">Website</string>
    <string name="info_website">Visit our website</string>
    <string name="title_google_plus">Google +</string>
    <string name="info_google_plus">Visit our page</string>
    <string name="title_facebook">Facebook</string>
    <string name="info_facebook">Visit our fanpage</string>
    <string name="title_rate_us">Rate me</string>
    <string name="info_rate_us">Rate me in Google Play Store</string>
    <string name="title_more_app">More apps</string>
    <string name="info_more_app">Feel fun with our applications</string>
    <string name="info_no_result">No Result Found</string>
    <string name="quit_message">Do you want to quit this application?</string>
    <string name="info_delete_favorites">Do you want to delete all favorite locations?</string>
    <string name="info_no_delete_favorites">No favorite location to delete!</string>
    <string name="title_warning_close">Exit</string>
    <string name="info_lose_internet">No internet connection.Please check again!</string>
    <string name="info_empty">Please enter the keyword!</string>
    <string name="info_close_app">Do you want to exit the application?</string>
    <string name="info_server_error">We can not connect to server.Please try again!</string>
    <string name="dircache">/auctions</string>
    <string name="lru_dircache">auctions</string>
    <string name="info_login_facebook_error">Login facebook error!Try again</string>
    <string name="info_login_twitter_error">Login twitter error!Try again</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="info_version_format">Version %1$s</string>
    <string name="info_distance_km_format">~ %1$s km</string>
    <string name="info_distance_miles_format">~ %1$s mi</string>
    <string name="format_start_address"><Data><![CDATA[<font color=\'#999999\'>From&nbsp;</font><font color=\'#000000\'>%1$s</font>]]></Data></string>
    <string name="format_end_address"><Data><![CDATA[<font color=\'#999999\'>To&nbsp;</font><font color=\'#000000\'>%1$s</font>]]></Data></string>
    <string name="format_duration_distance"><Data><![CDATA[<font color=\'#000000\'>%1$s&nbsp;</font><font color=\'#999999\'>(%2$s)</font>]]></Data></string>
    <string name="format_sumary"><Data><![CDATA[<font color=\'#999999\'>Via %1$s</font>]]></Data></string>

    <string-array name="list_options">
        <item>Home</item>
        <item>My Location</item>
        <item>Favorites</item>
        <item>Settings</item>
        <item>About Us</item>
    </string-array>

    <string name="action_search">찾기</string>
    <string name="title_activity_company_info">CompanyInfoActivity</string>
    <string name="title_activity_company_details">사업장 상세 정보</string>
    <string name="action_about">우리동네 위험지도란?</string>
    <string name="app_description">본 위험정보는 전체사업장의 19.7%에 불과하다. 따라서 대다수 정보의 추가공개가 필요하다.</string>
    <string name="action_join">+ 더보기</string>
    <string name="title_activity_join">이용자 참여</string>
    <string name="title_activity_matter_datail">물질상세정보</string>
    <string name="title_activity_riskinfo_datail">위험성 정보</string>
    <string name="title_activity_poisoninfo_datail">독성별 상세정보</string>
    <string name="title_activity_cancerinfo_datail">발암성물질 상세정보</string>
    <string name="action_details">액션상세</string>
    <string name="action_help">도우말</string>
    <string name="company_name">업체명</string>
    <string name="address">주소</string>
    <string name="riskinfo_circle">위험정보 circle</string>
    <string name="matter_name">물질명</string>
    <string name="riskinfo_string">위험정보</string>
    <string name="gohome">HOME</string>
    <string name="casno_string">카스번호</string>
    <string name="etcinfo_string">기타정보</string>
    <string name="title_riskinfo_button">위험성 정보</string>
    <string name="plz_select_marker">마커를 선택하면 정보가 표시됩니다.</string>
    <string name="title_cancer_search">발생 가능한 암 종류 검색</string>
    <string name="title_escape_info">사고대비물질 가이드 안내</string>
    <string name="version_name">0.201504071752</string>

</resources>
