<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:actionViewClass="android.widget.SearchView"
          android:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_about" 
          android:icon="@drawable/ic_launcher"
        android:title="@string/action_about"
        android:showAsAction="ifRoom"
         />


</menu>
