<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="1dp"
    android:paddingTop="1dp" >

    <ImageView
        android:id="@+id/imgiRiskInfo"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:contentDescription="@string/riskinfo_circle"
        android:src="@drawable/circle_white" />

    <TextView
        android:id="@+id/txtiMatterName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/matter_name" />

    <TextView
        android:id="@+id/txtiRiskInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/riskinfo_string" />

</LinearLayout>