<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="@color/blue"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <ImageView
        android:id="@+id/imgcdRiskInfo"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:contentDescription="@string/riskinfo_circle"
        android:src="@drawable/circle_white" />

    <TextView
        android:id="@+id/txtcdMatterName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/matter_name"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtcdRiskInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@color/blue"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/riskinfo_string"
        android:textColor="@color/white" />

</LinearLayout>